--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,11 @@ main a:hover {
   text-decoration: underline;
 }
 
+body {
+  background-color: lightblue;
+}
+
+
 
 /* for milstone 1 book display */
 .book-display, .book-list {
