--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: #F7CAC9;
   color: white;
   padding: 1rem 2rem;
   flex-wrap: wrap;
@@ -43,12 +43,12 @@ nav a {
 }
 
 nav a:hover {
-  color: #e91e63;
+  color: #A47864;
 }
 
 /* Hero Section */
 .hero {
-  background-color: #e91e63;
+  background-color: #92A8D1;
   color: white;
   text-align: center;
   padding: 3rem 1rem;
@@ -94,7 +94,7 @@ main li {
 }
 
 main a {
-  color: #e91e63;
+  color: #92A8D1;
   text-decoration: none;
   font-weight: bold;
 }
